# MNISTNeuralNetwork

./: CMakeLists.txt  README.md  main.c
src/: io.c  io.h  linalg.c  linalg.h  main.c  main.h
